--- a/chapter5-farpfar.tex
+++ b/chapter5-farpfar.tex
@@ -2,7 +2,7 @@
 
 In this section we propose a post-processing approach to mitigate provider unfairness in the context of microlending. Provider unfairness here is defined as mitigating the presentation bias for the minority groups and it is calculated over a single dimension (region). Since the recommendation slots are limited, utility becomes rivalrous for providers. Recommendation systems contain popularity bias that contributes to presentation bias. And the utility is calculated as an average utility over all the users. Therefore, this value is skewed towards the majority group and any attempt to increase the exposure of the minority group, by allocating some of the recommendation slots to them, will lead to loss of accuracy. 
 
-The goal in this project is to achieve a reasonable accuracy / fairness balance. In other words, we intend to maximize lenders' interests, while ensuring a "fairer" allocation of recommendation opportunities across the borrower side. Our method has the capability of controlling between fairness and accuracy, so it can be tuned according to the application that it is going to be used for.
+The goal in this project is to achieve a reasonable accuracy / fairness balance. In other words, we intend to maximize lenders' interests, while ensuring a ``fairer'' allocation of recommendation opportunities across the borrower side. Our method has the capability of controlling between fairness and accuracy, so it can be tuned according to the application that it is going to be used for.
 
 \subsection{Introduction}
 
