--- a/refs.bib
+++ b/refs.bib
@@ -1664,7 +1664,12 @@ location = {Vancouver, British Columbia, Canada},
 series = {RecSys '18}
 }
 
-
+@article{bellogin2021improving,
+  title={Improving Accountability in Recommender Systems Research Through Reproducibility},
+  author={Bellog{\'\i}n, Alejandro and Said, Alan},
+  journal={arXiv preprint arXiv:2102.00482},
+  year={2021}
+}
 
 @InProceedings{pmlr-v81-ensign18a,
   title = 	 {Runaway Feedback Loops in Predictive Policing},
@@ -4320,6 +4325,47 @@ Independence for a Find-Good-Items Task},
   booktitle={Poster Proceedings of the 10th ACM Conference on Recommender Systems}
 }
 
+@article{DINOIA2017234,
+title = {Adaptive multi-attribute diversity for recommender systems},
+journal = {Information Sciences},
+volume = {382-383},
+pages = {234-253},
+year = {2017},
+issn = {0020-0255},
+doi = {https://doi.org/10.1016/j.ins.2016.11.015},
+url = {https://www.sciencedirect.com/science/article/pii/S0020025516318035},
+author = {Tommaso {Di Noia} and Jessica Rosati and Paolo Tomeo and Eugenio Di Sciascio}}
+
+@article{RICOTTA2006237,
+title = {Towards a unifying approach to diversity measures: Bridging the gap between the Shannon entropy and Rao's quadratic index},
+journal = {Theoretical Population Biology},
+volume = {70},
+number = {3},
+pages = {237-243},
+year = {2006},
+issn = {0040-5809},
+doi = {https://doi.org/10.1016/j.tpb.2006.06.003},
+url = {https://www.sciencedirect.com/science/article/pii/S004058090600075X},
+author = {Carlo Ricotta and Laszlo Szeidl},
+}
+
+
+@inproceedings{Eskandanian2017,
+author = {Eskandanian, Farzad and Mobasher, Bamshad and Burke, Robin},
+title = {A Clustering Approach for Personalizing Diversity in Collaborative Recommender Systems},
+year = {2017},
+isbn = {9781450346351},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3079628.3079699},
+doi = {10.1145/3079628.3079699},
+booktitle = {Proceedings of the 25th Conference on User Modeling, Adaptation and Personalization},
+pages = {280–284},
+numpages = {5},
+location = {Bratislava, Slovakia},
+series = {UMAP '17}
+}
+
 @inproceedings{santos2010exploiting,
   title={Exploiting query reformulations for web search result diversification},
   author={Santos, Rodrygo LT and Macdonald, Craig and Ounis, Iadh},
@@ -5963,21 +6009,6 @@ series = {KDD '15}
   year={2018}
 }
 
-@inproceedings{mehtora2018towards,
-author = {Mehrotra, Rishabh and McInerney, James and Bouchard, Hugues and Lalmas, Mounia and Diaz, Fernando},
-title = {Towards a Fair Marketplace: Counterfactual Evaluation of the Trade-off between Relevance, Fairness \& Satisfaction in Recommendation Systems},
-year = {2018},
-isbn = {9781450360142},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3269206.3272027},
-doi = {10.1145/3269206.3272027},
-booktitle = {Proceedings of the 27th ACM International Conference on Information and Knowledge Management},
-pages = {2243–2251},
-numpages = {9},
-location = {Torino, Italy},
-series = {CIKM '18}
-}
 
 @phdthesis{abdollahpouri2020popularity,
   title={Popularity bias in recommendation: A multi-stakeholder perspective},
@@ -6490,6 +6521,22 @@ url = {https://doi.org/10.1145/3320435.3320464},
 booktitle = {Proceedings of the 27th ACM Conference on User Modeling, Adaptation and Personalization},
 pages = {225–233},
 numpages = {9}
+}
+
+@inproceedings{Mehrotra2018Towards,
+author = {Mehrotra, Rishabh and McInerney, James and Bouchard, Hugues and Lalmas, Mounia and Diaz, Fernando},
+title = {Towards a Fair Marketplace: Counterfactual Evaluation of the Trade-off between Relevance, Fairness &amp; Satisfaction in Recommendation Systems},
+year = {2018},
+isbn = {9781450360142},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3269206.3272027},
+doi = {10.1145/3269206.3272027},
+booktitle = {Proceedings of the 27th ACM International Conference on Information and Knowledge Management},
+pages = {2243–2251},
+numpages = {9},
+location = {Torino, Italy},
+series = {CIKM '18}
 }
 
 
