Grammerly  edits and revisions on the structure

--- a/chapter2-recsys.tex
+++ b/chapter2-recsys.tex
@@ -1,6 +1,8 @@
 \chapter{Recommender Systems}
 \label{ch:recsys}
 
+    This chapter will be added after the submission of the draft to the committee.
+
 % intro
 % goals of recsys
 % basic models of recsys
