--- a/chapter6-postprocess.tex
+++ b/chapter6-postprocess.tex
@@ -16,12 +16,14 @@ Compared to complex machine learning models, re-ranking approaches provide more 
 
 \section{Fair-Aware Re-ranking/Personalized Fair-Aware Re-ranking (FAR/PFAR)}
     \input chapter6-farpfar.tex
+    \clearpage
     
 
 \section{Opportunistic Multi-aspect Fairness through Personalized Re-ranking (OFAIR)}
-    % \input chapter6-ofair.tex
+    \input chapter6-ofair.tex
+    \clearpage
+% \section{Social Choice for Re-ranking Under Fairness (SCRUF): Dynamic Lotteries for Multi-group Fairness-Aware Recommendation}
+\section{Social Choice for Re-ranking Under Fairness (SCRUF)}
+    \input chapter6-dynamicfair.tex
     
-    
-\section{Social Choice for Re-ranking Under Fairness (SCRUF): Dynamic Lotteries for Multi-group Fairness-Aware Recommendation}
-    % \input chapter6-dynamicfair.tex
 
