--- a/main.tex
+++ b/main.tex
@@ -138,17 +138,14 @@
 
 \input macros.tex
 
-% \input chapter1-intro.tex
-% \input chapter2-fairness.tex
-
-\chapter{Recommender Systems}
-\label{ch:recsys}
-
-% \input chapter3-methodology.tex
-\input chapter4-inprocess.tex
-% \input chapter5-postprocess.tex
-% \input chapter6-librec.tex
-% \input chapter7-conclusion.tex
+\input chapter1-intro.tex
+\input chapter2-recsys.tex
+\input chapter3-fairness.tex
+\input chapter4-methodology.tex
+\input chapter5-inprocess.tex
+\input chapter6-postprocess.tex
+\input chapter7-librec.tex
+\input chapter8-conclusion.tex
 
 %%%%%%%%%   then the Bibliography, if any   %%%%%%%%%
 \bibliographystyle{plain}	% or "siam", or "alpha", etc.
